src/objects/Risk_Lookup__c.object
<CustomObject>
    <description>This is a master object in Quality Central. This combines all Risk Objects</description>
    <fields>
        <fullName>Occurrence_Probability__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Required.</description>
        <label>Occurrence Probability</label>
        <referenceTo>Risk_Occurrence__c</referenceTo>
        <relationshipLabel>Risk Lookups</relationshipLabel>
        <relationshipName>Risk_Lookups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Priority__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Required</description>
        <label>Risk Priority</label>
        <referenceTo>Risk_Priority__c</referenceTo>
        <relationshipLabel>Risk Lookups</relationshipLabel>
        <relationshipName>Risk_Lookups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity_Level__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Required.</description>
        <label>Severity Level</label>
        <referenceTo>Risk_Severity__c</referenceTo>
        <relationshipLabel>Risk Lookups</relationshipLabel>
        <relationshipName>Risk_Lookups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Risk Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Risk-{0}</displayFormat>
        <label>Risk</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Lookups</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>